<resources>
    <string name="app_name">     Recording </string>
    <string name="app_sub_title">Reducing corruption</string>
    <string name="title_home">Login</string>
    <string name="title_user_info">Register</string>
    <string name="logout_info">Log Out</string>
    <string name="next">Next</string>
    <string name="buyText">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="recordingTypeText">Type</string>
    <string name="title_recordings">Recordings</string>
    <string name="paymentMethodLabel">Payment Method</string>
    <string name="app_platform">REMOTE</string> <!--REMOTE, LOCAL-->
    <string name="auth_service_url">http://10.0.2.2:8080/authenticate/verifyMobileAndPassword</string>
    <string name="wallet_service_url">http://10.0.2.2:8080/wallet-purchase/</string>
    <string name="balance_service_url">http://10.0.2.2:8080/balance/</string>
    <string name="points_service_url">http://10.0.2.2:8080/points/</string>
    <string name="redeem_service_url">http://10.0.2.2:8080/redeem/</string>
    <string name="reg_data_service_url">http://10.0.2.2:8080/reg-data/</string>
    <string name="vouchers_service_url">http://10.0.2.2:8080/vouchers/</string>
    <string name="recordings_service_url">http://10.0.2.2:8080/recordings/</string>
    <string name="register_service_url">http://10.0.2.2:8080/register/</string>
    <string name="payment_methods_service_url">http://10.0.2.2:8080/payment-methods/</string>
    <string name="support_url">http://www.paystream.co.zw/support</string>
    <string name="terms_url">http://www.paystream.co.zw/terms</string>
    <string name="title_vouchers_info">Vouchers</string>
    <string name="title_products">Products</string>
    <string name="previous">Previous</string>
    <string name="title">Identity Manager</string>
    <string name="nationalIdText">National ID</string>
    <string name="password">Password</string>
    <string name="session_ttl">300000</string>
    <string name="please_login">Please Login</string>
    <string name="select_query_info">Select Voucher Query Info</string>
    <string name="sync_info">Sync Information</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="title_check_balance">Check Balance</string>
    <string name="mobileText">Mobile Number</string>
    <string name="product_list_info">Product List</string>
    <string name="outcomeText">Distributed</string>
    <string name="voucher_list_info">Vouchers</string>
    <string name="lastNameText">Last Name</string>
    <string name="fullName">Name</string>
    <string name="name">Name</string>
    <string name="pointsText">Points</string>
    <string name="redeemText">Redeem</string>
    <string name="rewardPointsTxt">Loyalty Points</string>
    <string name="points_in_account">The loyalty points on the account are </string>
    <string name="logged_out">You have been logged out</string>
    <string name="balance_on_account">The balance on the account is </string>
    <string name="visit_terms">Please see our terms and conditions page at: </string>
    <string name="visit_support">Please visit our support page at: </string>
    <string name="selectVendor">Select Vendor</string>
    <string name="selectMethod">Select Payment Method</string>
    <string name="merchant">Merchant</string>
    <string name="productNameText">Product Name:</string>
    <string name="productMerchantText">Merchant:</string>
    <string name="minPurchaseText">Min:</string>
    <string name="maxPurchaseText">Max:</string>
    <string name="accountPinText">Payment Account Pin</string>
    <string name="accountNumberText">Payment Account Number</string>
    <string name="accountNameText">Payment Account Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="middleNameText">Middle Name</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="search">Search</string>
    <string name="download_backend_url">http://10.0.2.2:9080/smartaid/web/sync-download-from-server</string>
    <string name="upload_backend_url">http://10.0.2.2:9080/smartaid/web/sync-upload-to-server</string>
    <string name="clear">Clear</string>
    <string name="chooser_title">Choose File</string>
    <string name="download_database">Download Database</string>
    <string name="upload_database">Upload Database</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>
    <string name="under_construction">Under Construction</string>
    <string name="positive_status_info">Operation Succeeded</string>
    <string name="negative_status_info">Operation Failed</string>
    <string name="enter_user_id">Enter ID</string>
    <string name="firstNameText">First Name</string>
    <string name="enter_register_user_info">Register</string>
    <string name="register_info_summary">Registration Summary</string>
    <string name="invalid_password">Invalid Password Found</string>
    <string name="title_login">Login</string>
    <string name="title_at_home">Home</string>
    <string name="select_reg_type">Select Registration Type</string>
    <string name="title_register_info">Register</string>
    <string name="agree_terms">I HAVE READ AND AGREE TO THESE TERMS AND CONDITIONS</string>
    <string name="help">Help</string>
    <string name="status_info">Status</string>
    <string name="errorHeader">An Error Occured</string>
    <string name="terms">Terms</string>
    <string name="done_label">DONE</string>
    <string name="action_label">ACTION</string>
    <string name="copyright">Copyright \u00A9 MaroTech Solutions 2024 - 2030</string>
    <string name="site_url_link"> http://www.paystream.co.zw</string>
    <string name="submit_label">Submit</string>
    <string name="request_label">Request</string>
    <string name="contactNumberLabel">Contact Number</string>
    <string name="enter_register_info">Enter Registration Info</string>
    <string name="service_terms">Terms of Service</string>
    <string name="help_using">Help using the app</string>
    <string name="Log_into_system">Log into System</string>
    <string name="locationText">Location</string>
    <string name="emailText">Email</string>
    <string name="nameText">Name</string>
    <string name="productText">Product</string>
    <string name="townText">Town</string>
    <string name="dobText">Date of Birth</string>
    <string name="addressText">Address</string>
    <string name="logout">Logout</string>
    <string name="regAsUser">Register As User</string>
    <string name="regAsAgent">Register As Agent</string>
    <string name="selectRegType">Registration Type</string>
    <string name="register_label">Register</string>
    <string name="currencyValue">USD</string>
    <string name="regCountry">ZW</string>
    <string name="dob">DOB</string>
    <string name="dobGreater">DOB must be</string>
    <string name="balance_summary">Account Balance</string>
    <string name="currency">Currency</string>
    <string name="buyerMobileText">Buyer\'s Mobile</string>
    <string name="beneficiaryMobileText">Beneficiary\'s Mobile</string>
    <string name="amountText">Amount (USD)</string>
    <string name="regVendorLabel">Vendor</string>
    <string name="meterText">Meter</string>
    <string name="regMinAge">16</string>
    <string name="dateText">Date</string>
    <string name="enter_query_info">Enter Query Info</string>
    <string name="purchase_report_info">Orders Report</string>
    <string name="purchase_summary_label">Order Summary</string>
    <string name="passwordText">Password</string>
    <string name="secQuestion1Text">Security Question1</string>
    <string name="secQuestion2Text">Security Question2</string>
    <string name="secQuestion3Text">Security Question3</string>
    <string name="summary_order">Order Summary</string>
    <string name="enter_purchase_info">Enter Purchase Info</string>
    <string name="require_password_entry_always">REQUIRE SECURITY CODE FOR ALL PAYMENTS</string>
    <string name="require_password_entry_for_large_amounts">REQUIRE SECURITY CODE ONLY FOR LARGE PAYMENTS</string>
    <string name="allow_remote_code_label">REQUIRE REMOTE AUTHORISATION FOR PAYMENTS</string>
    <string name="dont_allow_remote_code_label">DO NOT REQUIRE REMOTE AUTHORISATION FOR PAYMENTS</string>
</resources>
