<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_recordings_info"
        android:icon="@drawable/gear"
        android:tooltipText="@string/title_products"
        android:title="@string/title_products"/>

    <item
        android:id="@+id/navigation_vouchers_info"
        android:icon="@drawable/topup"
        android:tooltipText="@string/title_vouchers_info"
        android:title="@string/title_vouchers_info"/>

    <item
        android:id="@+id/navigation_balance_info"
        android:icon="@drawable/star"
        android:tooltipText="@string/title_check_balance"
        android:title="@string/title_check_balance"/>

    <item
        android:id="@+id/navigation_register_info"
        android:icon="@drawable/info"
        android:tooltipText="@string/title_user_info"
        android:title="@string/title_user_info"/>

</menu>
