<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <ScrollView
        android:id="@+id/regScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/regButtonRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/regLayoutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/title_register_info"
                android:textAlignment="center"
                android:textColor="@color/rebeccaPurple"
                android:textSize="18sp" />
            <!-- Reg Type -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <RadioGroup
                    android:id="@+id/reg_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/regTypeUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/regAsUser" />

                    <RadioButton
                        android:id="@+id/regTypeAgent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/regAsAgent" />
                </RadioGroup>
            </LinearLayout>
            <!-- Vendors -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regVendorIdLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/regVendorLabel"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/regSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/contents_text" />
            </LinearLayout>
            <!-- First Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regFirstNameLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/firstNameText"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- Middle Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regMiddleNameLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/middleNameText"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regMiddleName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- Last Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regLastNameLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/lastNameText"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- Mobile Number-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regMobileNumberLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/mobileText"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regMobileNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regEmailLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/emailText"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- National ID Mobile -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regNationalIdLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/nationalIdText"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regNationalId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- Password -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regPasswordLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/passwordText"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- Address -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regAddressLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/addressText"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- Town -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regTownLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/townText"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regTown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- DOB -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regDateOfBirth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="false"
                    android:background="@android:drawable/edit_text"
                    android:padding="8dp"
                    android:text="@string/dobText"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Security Question 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regAnswer1Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/secQuestion1Text"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regAnswer1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- Security Question 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regAnswer2Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/secQuestion2Text"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regAnswer2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/contents_text" />
            </LinearLayout>

            <!-- Security Question 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/regAnswer3Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/secQuestion3Text"
                    android:textColor="@color/accent_material_light"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/regAnswer3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="@color/contents_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/regButtonRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/regBtnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/clear"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/regBtnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/register_label"
            android:textColor="#ffffff" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
